force-app/main/default/objects/skedHC__Outcome__c/skedHC__Outcome__c.object-meta.xml
<CustomObject>
    <label>Outcome</label>
    <nameField>
        <displayFormat>SPO-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>