force-app/main/default/objects/skedHC__Outcome__c/fields/skedHC__End_Date__c.field-meta.xml
<CustomField>
    <fullName>skedHC__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>