force-app/main/default/objects/skedHC__Outcome__c/fields/skedHC__Outcome__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Outcome__c</fullName>
    <label>Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>