force-app/main/default/objects/skedHC__Outcome__c/fields/skedHC__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>