force-app/main/default/objects/skedHC__Outcome__c/fields/skedHC__Status__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Making Progress</fullName>
            </value>
            <value>
                <fullName>Not Making Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Achieving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>