force-app/main/default/objects/skedHC__Outcome__c/fields/skedHC__Support_Plan__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Support_Plan__c</fullName>
    <label>Support Plan</label>
    <referenceTo>skedHC__Support_Plan__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>